actualizar path del index

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <!--Navegación-->
       <div class="header-main">
         <div class="header-logo">
-          <a href="/index.html" >
-            <img class="cac-logo" src="/assets/img/logo-cac.png" alt="Logo Codo a Codo"/>
+          <a href="./index.html" >
+            <img class="cac-logo" src="./assets/img/logo-cac.png" alt="Logo Codo a Codo"/>
           </a>
           <h2 class="header-title">Conf BsAs</h2>
         </div>
@@ -32,7 +32,7 @@
             <li><a class="nav-links" href="#oradores">Los Oradores</a></li>
             <li><a class="nav-links" href="#lugar-fecha">El lugar y la fecha</a></li>
             <li><a class="nav-links" href="#participa">Conviértete en Orador</a></li>
-            <li><a class="nav-links-accent" href="/pages/tickets.html">Comprar Tickets</a></li>
+            <li><a class="nav-links-accent" href="./pages/tickets.html">Comprar Tickets</a></li>
           </ul>
         </nav>
       </div>
@@ -50,7 +50,7 @@
           </p>
           <div>
             <button class="hero-btn btn-outline"><a href="#participa">Quiero ser Orador</a></button>
-            <button class="hero-btn btn-filled"><a href="/pages/tickets.html">Comprar Tickets</a></button>
+            <button class="hero-btn btn-filled"><a href="./pages/tickets.html">Comprar Tickets</a></button>
           </div>
         </div>
       </div>
@@ -63,7 +63,7 @@
         </div>
         <div class="cards-speakers">
           <div class="cards">
-            <img class="cards-images" src="/assets/img/orador-jobs.jpg" alt="Imagen de Steve Jobs"/>
+            <img class="cards-images" src="./assets/img/orador-jobs.jpg" alt="Imagen de Steve Jobs"/>
             <div class="cards-content">
               <button class="btn-cards tech-js">JavaScript</button><button class="btn-cards tech-react">React</button>
               <h4 class="title-cards">Steve Jobs</h4>
@@ -77,7 +77,7 @@
             </div>
           </div>
           <div class="cards">
-            <img class="cards-images" src="/assets/img/orador-gates.jpg" alt="Imagen de Bill Gates"/>
+            <img class="cards-images" src="./assets/img/orador-gates.jpg" alt="Imagen de Bill Gates"/>
             <div class="cards-content">
               <button class="btn-cards tech-js">JavaScript</button><button class="btn-cards tech-react">React</button>
               <h4 class="title-cards">Bill Gates</h4>
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div class="cards">
-            <img class="cards-images" src="/assets/img/orador-lovelace.jpg" alt="Imagen de Ada Lovelace" />
+            <img class="cards-images" src="./assets/img/orador-lovelace.jpg" alt="Imagen de Ada Lovelace" />
             <div class="cards-content">
               <button class="btn-cards tech-bussines">Negocios</button><button class="btn-cards tech-startups">Starups</button>
               <h4 class="title-cards">Ada Lovelace</h4>
@@ -108,7 +108,7 @@
       <!--Buenos Aires-->
       <section id="lugar-fecha" class="bsas-section">
         <div class="bsas-image">
-          <img class="bsas-image-u" src="/assets/img/caba.png" alt="Imagen del Obelisco en Buenos Aires">
+          <img class="bsas-image-u" src="./assets/img/caba.png" alt="Imagen del Obelisco en Buenos Aires">
         </div>
         <div class="city-container">
           <h3 class="city-title">Buenos Aires - Octubre</h3>
@@ -160,13 +160,13 @@
     <!--Footer-->
     <footer class="footer-section">
       <ul class="footer-nav">
-        <li class="nav-elements"><a class="footer-nav-links" href="/pages/faq.html">Preguntas<br>Frecuentes</a></li>
-        <li class="nav-elements"><a class="footer-nav-links" href="/pages/contactanos.html">Contáctanos</a></li>
-        <li class="nav-elements"><a class="footer-nav-links" href="/pages/prensa.html">Prensa</a></li>
-        <li class="nav-elements"><a class="footer-nav-links" href="/pages/conferencias.html">Conferencias</a></li>
-        <li class="nav-elements"><a class="footer-nav-links" href="/pages/tyc.html">Términos y<br>Condiciones</a></li>
-        <li class="nav-elements"><a class="footer-nav-links" href="/pages/privacidad.html">Privacidad</a></li>
-        <li class="nav-elements"><a class="footer-nav-links" href="/pages/estudiantes.html">Estudiantes</a></li>
+        <li class="nav-elements"><a class="footer-nav-links" href="./pages/faq.html">Preguntas<br>Frecuentes</a></li>
+        <li class="nav-elements"><a class="footer-nav-links" href="./pages/contactanos.html">Contáctanos</a></li>
+        <li class="nav-elements"><a class="footer-nav-links" href="./pages/prensa.html">Prensa</a></li>
+        <li class="nav-elements"><a class="footer-nav-links" href="./pages/conferencias.html">Conferencias</a></li>
+        <li class="nav-elements"><a class="footer-nav-links" href="./pages/tyc.html">Términos y<br>Condiciones</a></li>
+        <li class="nav-elements"><a class="footer-nav-links" href="./pages/privacidad.html">Privacidad</a></li>
+        <li class="nav-elements"><a class="footer-nav-links" href="./pages/estudiantes.html">Estudiantes</a></li>
       </ul>
     </footer>
   </body>
