actualización final de los paths

--- a/pages/tyc.html
+++ b/pages/tyc.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap"
       rel="stylesheet"
@@ -21,18 +21,18 @@
       <!--Navegación-->
       <div class="header-main-pages">
         <div class="header-logo">
-          <a href="/index.html" >
-            <img class="cac-logo" src="/assets/img/logo-cac.png" alt="Logo Codo a Codo"/>
+          <a href="../index.html" >
+            <img class="cac-logo" src="../assets/img/logo-cac.png" alt="Logo Codo a Codo"/>
           </a>
           <h2 class="header-title">Conf BsAs</h2>
         </div>
         <nav>
           <ul class="header-links">
-            <li><a class="nav-links" href="/index.html#conferencia">La Conferencia</a></li>
-            <li><a class="nav-links" href="/index.html#oradores">Los Oradores</a></li>
-            <li><a class="nav-links" href="/index.html#lugar-fecha">El lugar y la fecha</a></li>
-            <li><a class="nav-links" href="/index.html#participa">Conviértete en Orador</a></li>
-            <li><a class="nav-links-accent" href="/pages/tickets.html">Comprar Tickets</a></li>
+            <li><a class="nav-links" href="../index.html#conferencia">La Conferencia</a></li>
+            <li><a class="nav-links" href="../index.html#oradores">Los Oradores</a></li>
+            <li><a class="nav-links" href="../index.html#lugar-fecha">El lugar y la fecha</a></li>
+            <li><a class="nav-links" href="../index.html#participa">Conviértete en Orador</a></li>
+            <li><a class="nav-links-accent" href="../pages/tickets.html">Comprar Tickets</a></li>
           </ul>
         </nav>
       </div>
@@ -75,13 +75,13 @@
     <!--Footer-->
     <footer class="footer-section">
         <ul class="footer-nav">
-          <li class="nav-elements"><a class="footer-nav-links" href="/pages/faq.html">Preguntas<br>Frecuentes</a></li>
-          <li class="nav-elements"><a class="footer-nav-links" href="/pages/contactanos.html">Contáctanos</a></li>
-          <li class="nav-elements"><a class="footer-nav-links" href="/pages/prensa.html">Prensa</a></li>
-          <li class="nav-elements"><a class="footer-nav-links" href="/pages/conferencias.html">Conferencias</a></li>
-          <li class="nav-elements"><a class="footer-nav-links" href="/pages/tyc.html">Términos y<br>Condiciones</a></li>
-          <li class="nav-elements"><a class="footer-nav-links" href="/pages/privacidad.html">Privacidad</a></li>
-          <li class="nav-elements"><a class="footer-nav-links" href="/pages/estudiantes.html">Estudiantes</a></li>
+          <li class="nav-elements"><a class="footer-nav-links" href="../pages/faq.html">Preguntas<br>Frecuentes</a></li>
+          <li class="nav-elements"><a class="footer-nav-links" href="../pages/contactanos.html">Contáctanos</a></li>
+          <li class="nav-elements"><a class="footer-nav-links" href="../pages/prensa.html">Prensa</a></li>
+          <li class="nav-elements"><a class="footer-nav-links" href="../pages/conferencias.html">Conferencias</a></li>
+          <li class="nav-elements"><a class="footer-nav-links" href="../pages/tyc.html">Términos y<br>Condiciones</a></li>
+          <li class="nav-elements"><a class="footer-nav-links" href="../pages/privacidad.html">Privacidad</a></li>
+          <li class="nav-elements"><a class="footer-nav-links" href="../pages/estudiantes.html">Estudiantes</a></li>
         </ul>
       </footer>
   </body>
